--- a/HelloLibGdx/build.gradle
+++ b/HelloLibGdx/build.gradle
@@ -4,18 +4,18 @@ apply plugin: 'com.android.application'
 
 repositories {
     maven {
-        url 'http://dev.hihex.com/maven'
+        url 'http://dl.hihex.com/sdk/maven'
     }
 }
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion '22.0.1'
+    compileSdkVersion 23
+    buildToolsVersion '23.0.1'
 
     defaultConfig {
         applicationId 'hihex.sbrc_samples.hello_libgdx'
-        minSdkVersion 16
-        targetSdkVersion 19
+        minSdkVersion 15
+        targetSdkVersion 23
         versionCode 1
         versionName '1.0'
     }
@@ -26,7 +26,7 @@ configurations {
 }
 
 dependencies {
-    compile 'hihex.sbrc:sbrc:1.6.2@aar'
+    compile 'hihex.sbrc:sbrc:1.6.8.1350@aar'
 
     // These are libgdx dependencies. It is a bit different from the result of running `gdx-setup.jar` since we are
     // targeting Android only here... Well what is important is just the `sbrc` dependency above and the Java source
